# GLQuake3D

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: VSXPToolchain.cmake
game_root/id1/: autoexec.cfg  config.cfg
glquake/: CMakeLists.txt  GLQuake3D.sln  GLQuake3D.vcxproj  GLQuake3D.vcxproj.filters  bspfile.h  chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  console.h  d_iface.h  d_init.c  d_local.h  d_modech.c  d_polyse.c  d_sprite.c  d_surf.c  d_vars.c  d_varsa.s  draw.c  dxguid.h  gl_draw.c  gl_mesh.c  gl_model.c  gl_model.h  gl_refrag.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_vidnt.c  (+74 more)
glquake/GL_Release/: snd_mixa.asm  winquake.res
glquake/gas2masm/: gas2masm.cbp  gas2masm.layout  gas2masm1.dsp
