cmake_minimum_required(VERSION 3.12)
project(GLQuake3D)
add_compile_definitions(GLQUAKE)
add_executable(GLQuake3D WIN32
	glquake/cd_win.c
	glquake/chase.c
	glquake/cl_demo.c
	glquake/cl_input.c
	glquake/cl_main.c
	glquake/cl_parse.c
	glquake/cl_tent.c
	glquake/common.c
	glquake/conproc.c
	glquake/console.c
	glquake/cmd.c
	glquake/crc.c
	glquake/cvar.c
	glquake/gl_draw.c
	glquake/gl_mesh.c
	glquake/gl_model.c
	glquake/gl_refrag.c
	glquake/gl_rlight.c
	glquake/gl_rmain.c
	glquake/gl_rmisc.c
	glquake/gl_rsurf.c
	glquake/gl_screen.c
	glquake/gl_vidnt.c
	glquake/gl_warp.c
	glquake/host.c
	glquake/host_cmd.c
	glquake/in_win.c
	glquake/keys.c
	glquake/mathlib.c
	glquake/menu.c
	glquake/net_dgrm.c
	glquake/net_loop.c
	glquake/net_main.c
	glquake/net_vcr.c
	glquake/net_win.c
	glquake/net_wins.c
	glquake/net_wipx.c
	glquake/pr_cmds.c
	glquake/pr_edict.c
	glquake/pr_exec.c
	glquake/r_part.c
	glquake/sbar.c
	glquake/snd_dma.c
	glquake/snd_mem.c
	glquake/snd_mix.c
	glquake/snd_win.c
	glquake/sv_main.c
	glquake/sv_move.c
	glquake/sv_phys.c
	glquake/sv_user.c
	glquake/sys_win.c
	glquake/view.c
	glquake/wad.c
	glquake/world.c
	glquake/zone.c
	
	glquake/bspfile.h
	glquake/cdaudio.h
	glquake/client.h
	glquake/cmd.h
	glquake/common.h
	glquake/conproc.h
	glquake/console.h
	glquake/crc.h
	glquake/cvar.h
	glquake/d_iface.h
	glquake/dosisms.h
	glquake/draw.h
	glquake/gl_model.h
	glquake/glquake.h
	glquake/input.h
	glquake/keys.h
	glquake/mathlib.h
	glquake/menu.h
	glquake/modelgen.h
	glquake/net.h
	glquake/net_dgrm.h
	glquake/net_loop.h
	glquake/net_ser.h
	glquake/net_vcr.h
	glquake/net_wins.h
	glquake/net_wipx.h
	glquake/pr_comp.h
	glquake/progdefs.h
	glquake/progdefs.q1
	glquake/progs.h
	glquake/protocol.h
	glquake/quakedef.h
	glquake/r_local.h
	glquake/render.h
	glquake/sbar.h
	glquake/screen.h
	glquake/server.h
	glquake/sound.h
	glquake/spritegn.h
	glquake/sys.h
	glquake/view.h
	glquake/vid.h
	glquake/wad.h
	glquake/winquake.h
	glquake/world.h
	glquake/zone.h
)
target_link_libraries(GLQuake3D
	comctl32.lib
	dxguid.lib
	opengl32.lib
	winmm.lib
	wsock32.lib
)
